--- a/configs/valonctl.yml.example
+++ b/configs/valonctl.yml.example
@@ -18,4 +18,4 @@ etcd:
 
 ddns:
   # CoreDNS DDNS API endpoint for health checks
-  api_url: http://localhost:8053
+  api_url: http://100.100.0.1:8053
