--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "127.0.0.1:2379:2379"
       - "127.0.0.1:2380:2380"
     healthcheck:
-      test: ["CMD", "etcdctl", "endpoint", "health"]
+      test: ["CMD", "curl", "-f", "http://localhost:2379/health"]
       interval: 10s
       timeout: 5s
       retries: 3
